--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" >
   </head>
   <body>
-    <div id="root">Hello World</div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
